# SimpleMocksDemo

./: .gitignore  run_all_tests.py
.github/workflows/: ci.yml
OrderProcessor/: OrderProcessorDemo.slnx
OrderProcessor/OrderProcessor/: Program.cs
OrderProcessor/OrderProcessor.Tests/: OrderProcessor.Tests.csproj  UnitTest1.cs
OrderProcessor/OrderProcessor.Tests/IntegrationTests/: OrderPricingIntegrationTests.cs
OrderProcessor/OrderProcessor.Tests/UnitTests/: OrderValidatorTests.cs  PriceCalculatorTests.cs
OrderProcessor/OrderProcessor/Models/: Order.cs  OrderItem.cs
OrderProcessor/OrderProcessor/Services/: HttpTaxService.cs  ITaxService.cs  OrderValidator.cs  PriceCalculator.cs
OrderProcessorCpp/: CMakeLists.txt  build-steps.txt  main.cpp
OrderProcessorCpp/src/models/: order.h
OrderProcessorCpp/src/services/: HttpTaxService.cpp  HttpTaxService.h  ITaxService.h  OrderValidator.cpp  OrderValidator.h  PriceCalculator.cpp  PriceCalculator.h
OrderProcessorCpp/tests/: MockTaxService.h
OrderProcessorCpp/tests/IntegrationTests/: OrderPricingIntegrationTests.cpp
OrderProcessorCpp/tests/UnitTests/: OrderValidatorTests.cpp  PriceCalculatorTests.cpp
tax-service/: Dockerfile  docker-compose.yml  launch.sh  pyproject.toml
tax-service/src/tax_service/: app.py
