[project]
name = "tax-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cory Coward", email = "corydottech@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
tax-service = "tax_service.app:app"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
